iter_language/tests/corpus/compose/valid/trigger-files-terminate.iter
queue main file { path = "./.iter/queue" }

trigger batch files {
    from = ["path:./inbox.txt"]
    target = main
    terminate_on_completion = true
}
