iter_language/tests/corpus/compose/invalid/command-extract-jq-removed.iter
queue main file { path = "./.iter/queue" }

trigger probe command {
    run = "ls"
    extract = jq(".items[]")
    target = main
}
